logs/django-backstage.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/backstage'...
Listing './lib/python3.5/site-packages/backstage/act'...
Compiling './lib/python3.5/site-packages/backstage/act/act.py'...
***   File "./lib/python3.5/site-packages/backstage/act/act.py", line 85
    if new_port <> start_port:
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/backstage/act/act_utils.py'...
***   File "./lib/python3.5/site-packages/backstage/act/act_utils.py", line 17
    print '%s is not a valid backstage venue' % venue
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/backstage/conf'...
Listing './lib/python3.5/site-packages/backstage/db'...
Compiling './lib/python3.5/site-packages/backstage/db/db_utils.py'...
***   File "./lib/python3.5/site-packages/backstage/db/db_utils.py", line 41
    print 'error getting database'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/backstage/docs'...
Compiling './lib/python3.5/site-packages/backstage/models.py'...
***   File "./lib/python3.5/site-packages/backstage/models.py", line 18
    print 'not so fast buddy.'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/backstage/producer'...
Listing './lib/python3.5/site-packages/backstage/settings'...
Listing './lib/python3.5/site-packages/backstage/skel'...
Listing './lib/python3.5/site-packages/backstage/skel/act'...
Listing './lib/python3.5/site-packages/backstage/skel/act/.LIVE'...
Listing './lib/python3.5/site-packages/backstage/skel/act/cstatic'...
Listing './lib/python3.5/site-packages/backstage/skel/act/settings'...
Listing './lib/python3.5/site-packages/backstage/skel/act/static'...
Listing './lib/python3.5/site-packages/backstage/skel/act/templates'...
Listing './lib/python3.5/site-packages/backstage/skel/venue'...
Listing './lib/python3.5/site-packages/backstage/skel/venue/.LIVE'...
Listing './lib/python3.5/site-packages/backstage/skel/venue/acts'...
Listing './lib/python3.5/site-packages/backstage/skel/venue/db'...
Listing './lib/python3.5/site-packages/backstage/skel/venue/dns'...
Listing './lib/python3.5/site-packages/backstage/skel/venue/instruments'...
Listing './lib/python3.5/site-packages/backstage/skel/venue/instruments/local'...
Listing './lib/python3.5/site-packages/backstage/skel/venue/settings'...
Listing './lib/python3.5/site-packages/backstage/skel/venue/sites'...
Listing './lib/python3.5/site-packages/backstage/skel/venue/sites/example'...
Listing './lib/python3.5/site-packages/backstage/skel/venue/templates'...
Listing './lib/python3.5/site-packages/backstage/skel/venue/venv'...
Listing './lib/python3.5/site-packages/backstage/templatetags'...
Listing './lib/python3.5/site-packages/backstage/utils'...
Compiling './lib/python3.5/site-packages/backstage/utils/nginx_utils.py'...
***   File "./lib/python3.5/site-packages/backstage/utils/nginx_utils.py", line 41
    print 'instance error'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/backstage/utils/uwsgi'...
Compiling './lib/python3.5/site-packages/backstage/utils/uwsgi/linker_file_ini.py'...
***   File "./lib/python3.5/site-packages/backstage/utils/uwsgi/linker_file_ini.py", line 23
    print 'Vassal file already exists. Hint: try %s.restart() instead' % a
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/backstage/utils/uwsgi/linker_pg_plugin.py'...
***   File "./lib/python3.5/site-packages/backstage/utils/uwsgi/linker_pg_plugin.py", line 16
    print 'connection error'
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/backstage/utils/uwsgi_portsniffer.py'...
***   File "./lib/python3.5/site-packages/backstage/utils/uwsgi_portsniffer.py", line 24
    print 'OK %s:%s' % (uwsgi_ip, uwsgi_port)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/backstage/venue'...
Compiling './lib/python3.5/site-packages/backstage/venue/venue.py'...
***   File "./lib/python3.5/site-packages/backstage/venue/venue.py", line 19
    print 'Invalid Venue'
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/backstage/venue/venue_utils.py'...
***   File "./lib/python3.5/site-packages/backstage/venue/venue_utils.py", line 13
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_backstage-0.0.427.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools_git'...
Listing './lib/python3.5/site-packages/setuptools_git-1.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
